# FuelTracker

./: .env.example  .gitignore  .pre-commit-config.yaml  .vulture-whitelist.py  ABOUT.md  LICENSE  Makefile  README.md  alembic.ini  build.bat  build.ps1  build.sh  build.spec  fueltracker.spec  launcher.py  launcher.spec  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  resources.qrc  sitecustomize.py  version.txt
.github/workflows/: ci.yml  windows.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_budgets.py  0005_add_fuel_type_to_fuelentry.py  0006_add_indexes.py  0008_add_budget_index.py
assets/: resources.qrc
assets/qss/: dark.qss  modern.qss  theme.qss  theme_dark.qss  vivid.qss
docs/: API.md  BUDGET.md  EXPORTING.md  MAINTENANCE.md  REPORTS.md  UPDATER_SETUP.md  USAGE.md
fueltracker/: __init__.py  __main__.py
fueltracker.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
reports/: connectivity_report.md  vulture.txt
scripts/: dev_setup.sh  init_repo.sh  print_latest_oil_prices.py  validate_connectivity.py
src/: __init__.py  _vulture_whitelist.py  app.py  config.py  constants.py  hotkey.py  resources_rc.py  settings.py
src/controllers/: __init__.py  main_controller.py  undo_commands.py
src/fueltracker/: __init__.py  __main__.py  main.py  updater.py
src/fueltracker/migrations/: __init__.py  env.py
src/fueltracker/migrations/versions/: 0001_initial.py  0002_add_budgets.py  0003_add_maintenances.py  0004_add_fuel_prices.py  0006_add_indexes.py  0007_add_fuelprice_index.py  __init__.py
src/fueltracker/ui/: main_window.py
src/models/: __init__.py  budget.py  fuel_entry.py  fuel_price.py  maintenance.py  vehicle.py
src/repositories/: __init__.py  fuel_entry_repo.py
src/services/: __init__.py  charts.py  export_service.py  exporter.py  importer.py  oil_service.py  report_service.py  storage_service.py  theme_manager.py  tray_icon_manager.py  validators.py
src/views/: __init__.py  main_window.py  main_window.ui  reports_page.py  ui_main_window.py
src/views/dialogs/: __init__.py  about_dialog.py  about_dialog.ui  add_entry_dialog.py  add_entry_dialog.ui  add_maintenance_dialog.py  add_maintenance_dialog.ui  add_vehicle_dialog.py  add_vehicle_dialog.ui  import_csv_dialog.py  import_csv_dialog.ui  ui_about_dialog.py  ui_add_entry_dialog.py  ui_add_maintenance_dialog.py  ui_add_vehicle_dialog.py  ui_import_csv_dialog.py
tests/: conftest.py  test_auto_migration.py  test_backup.py  test_backup_sqlcipher_mock.py  test_budget_alert.py  test_budget_settings.py  test_config.py  test_constants.py  test_dialog_buttons.py  test_dialog_loaders.py  test_encryption.py  test_entrypoint.py  test_entrypoints_launch.py  test_export_report_async.py  test_export_service.py  test_export_service_errors.py  test_exporter_service.py  test_filter_entries.py  test_fuel_map.py  test_hotkey.py  test_icons.py  test_importer.py  test_incomplete_entries.py  test_inmemory_indexes.py  test_launcher_update.py  test_main_commands.py  test_main_controller.py  test_main_module.py  test_maintenance_dock.py  test_maintenance_notification.py  test_maintenance_storage.py  test_migration.py  test_models.py  test_oil_service.py  test_oil_service_helpers.py  test_page_switch.py  test_preferences.py  test_print_latest_oil_prices.py  test_refuel_flow.py  test_reports.py  (+22 more)
tools/: compile_resources.py  fetch_icons.py
win10toast/: __init__.py
win10toast_tests/: test_win10toast_fix.py
