[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fueltracker"
version = "0.1.0"
description = "Fuel tracker sample application"
requires-python = ">=3.11"
authors = [{name="Example", email="example@example.com"}]
dependencies = [
    "PySide6>=6.7",
    "SQLModel>=0.0.16",
    "pandas",
    "fpdf2",
    "matplotlib",
    "python-dotenv",
    "alembic",
    "reportlab",
    "win10toast; sys_platform == 'win32'",
    "requests",
    "keyboard",
    "openpyxl",
    "pydantic-settings",
    "rich",
    "appdirs",
]

[project.optional-dependencies]
dev = [
    # Task Runner
    "poethepoet",
    
    # Linters & Formatters
    "ruff",
    "mypy",
    "vulture",
    "black",

    # Testing
    "pytest",
    "pytest-qt",

    # Type Stubs
    "types-requests",
    "types-keyboard",
    "types-reportlab",
    "matplotlib-stubs",
    "PySide6-stubs",
    "types-setuptools",
]

[project.scripts]
fueltracker = "fueltracker.main:run"
fueltracker-launcher = "launcher:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.poe.tasks]
_ruff = { cmd = "python -m ruff check .", help = "Run ruff linter" }
_mypy = { cmd = "python -m mypy src/ --strict", help = "Run mypy type checking" }
_vulture = { cmd = "python -m vulture src tests .vulture-whitelist.py", help = "Detect dead code" }

lint = { sequence = ["_ruff", "_mypy", "_vulture"], help = "Run all linters" }
migrate = { cmd = "python -m fueltracker migrate", env = { PYTHONPATH = "src" }, help = "Run database migrations" }
test = { cmd = "python -m pytest -q", deps = ["migrate"], env = { PYTHONPATH = "src" }, help = "Run test suite" }
runtime-check = { cmd = "python -m fueltracker --check", env = { QT_QPA_PLATFORM = "offscreen", PYTHONPATH = "src" }, help = "Run app in headless mode" }
build = { cmd = "python -m PyInstaller --noconfirm --clean --onefile fueltracker.spec", help = "Build standalone executable" }
build-app = { cmd = "python -m PyInstaller --noconfirm --clean --onefile fueltracker.spec", help = "Build main FuelTracker.exe" }
build-launcher = { cmd = "python -m PyInstaller --noconfirm --clean --onefile launcher.spec", help = "Build the launcher executable" }
release = { shell = "poe build-app && poe build-launcher && zip -j dist/FuelTracker-${VERSION}-win64.zip dist/FuelTracker.exe && tufup repo targets add ${VERSION} dist/FuelTracker-${VERSION}-win64.zip && tufup repo sign timestamp && gh release create ${VERSION} dist/FuelTracker-${VERSION}-win64.zip --draft", help = "Create release" }
validate = { sequence = ["lint", "test"], help = "Run linters then tests" }
report = { sequence = ["lint", "test", "runtime-check"], help = "Run all checks" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
